--- a/index.html
+++ b/index.html
@@ -51,7 +51,12 @@
         <h2>What Client Are Saying</h2>
         <h3>Bruce Moccy</h3>
         <p>Founder & CEO Alies</p>
-        <b class="client-p">"Lorem ipsum dolor sit amet consectetur,  architecto laborum odio impedit mollitia voluptatibus repellendus veritatis quae quasi incidunt laboriosam nisi dolor id!"</b>
+       <div> <b class="client-p">"Lorem ipsum dolor sit amet consectetur, <br> voluptatibus repellendus veritatis quae quasi incidunt laboriosam nisi dolor id!"</b>
+        </div>
+        <div class="contact-area">
+            <a class="contact-button" target="_blank" href=""><p>Leave a message in the </p><h3>towhid3008@gmail.com</h3> </a>
+        </div>
     </section>
+    <footer class="footer-area">Towhid Hossain ©2020, All Rights Reserved</footer>
 </body>
 </html>
