--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
             <a class="link-button" target="_blank" href="https://www.linkedin.com/in/towhid-hossain-4b9a1678/">Hire Me</a>
         </div>
         <div class="half-width">
-            <img src="Images/peter.png" alt="">
+            <img src="images/peter.png" alt="">
         </div>
     </section>
     <section class="dream-area">
         <div class="half-width">
-            <img src="Images/peter_dream.png" alt="">
+            <img src="images/peter_dream.png" alt="">
         </div>
         <div class="half-width">
             <h2>Biography</h2>
