--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <p>Not thinking about to stop on an ultimate zone. Rather making ownself perfect to adapt with the advanced world.
             So i choose the field of web development to make my dream true. Hope the journey will enjoyable with full of energy and break a leg for my new and longest journey.
             </p>
-            <a class="link-button" target="_blank" href="">Download Resume</a>
+            <a class="link-button" target="_blank" href="">Download CV</a>
 
         </div>
     </section>
